# datapizza-ai

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  pyrightconfig.json  versions.json
.github/workfllows/: conventional-commits-check.yaml
.github/workflows/: test.yml
0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.7/API Reference/: index.html
0.0.7/API Reference/Modules/: index.html
0.0.7/API Reference/memory/: index.html
0.0.7/Guides/agent/: index.html
0.0.7/search/: search_index.json
0.0.9/: 404.html  index.html  objects.inv  sitemap.xml
0.0.9/API Reference/: index.html
0.0.9/API Reference/Modules/: index.html
0.0.9/API Reference/memory/: index.html
0.0.9/search/: search_index.json
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/API Reference/: index.html
0.1.0/API Reference/Modules/: index.html
0.1.0/API Reference/memory/: index.html
0.1.0/search/: search_index.json
datapizza-ai-cache/redis/: README.md  pyproject.toml
datapizza-ai-cache/redis/tests/: test_redis_cache.py
datapizza-ai-clients/datapizza-ai-clients-anthropic/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-anthropic/tests/: test_anthropic_memory_adapter.py  test_anthropic_streaming.py  test_anthropic_structured_response.py
datapizza-ai-clients/datapizza-ai-clients-bedrock/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-bedrock/tests/: test_bedrock_async.py
datapizza-ai-clients/datapizza-ai-clients-google/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-google/tests/: test_google_streaming.py  test_google_token_usage.py
datapizza-ai-clients/datapizza-ai-clients-mistral/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai-like/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai-like/tests/: test_openai_completion.py
datapizza-ai-clients/datapizza-ai-clients-openai/tests/: test_base_client.py  test_memory_adapter.py
datapizza-ai-clients/datapizza-ai-clients-regolo/: README.md  pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-regolo/datapizza/clients/regolo/: __init__.py  client.py  memory_adapter.py
datapizza-ai-clients/datapizza-ai-clients-regolo/tests/: duckcuckgo.py  multiagent.py  rag.py  test_regolo_client.py
datapizza-ai-clients/datapizza-ai-clients-watsonx/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-watsonx/datapizza/clients/watsonx/: __init__.py  memory_adapter.py  watsonx_client.py
datapizza-ai-core/: pyproject.toml
datapizza-ai-core/datapizza/agents/: __init__.py  agent.py  runner.py
datapizza-ai-core/datapizza/clients/: factory.py  mock_client.py
datapizza-ai-core/datapizza/embedders/: embedders.py
datapizza-ai-core/datapizza/memory/: __init__.py
datapizza-ai-core/datapizza/pipeline/: __init__.py  dag_pipeline.py  state_graph.py
datapizza-ai-core/datapizza/tools/: tools.py
datapizza-ai-core/datapizza/tracing/: tracing.py
datapizza-ai-core/datapizza/type/: type.py
datapizza-ai-embedders/azure/: README.md  pyproject.toml
datapizza-ai-embedders/azure/tests/: test_azure_openai_embedder.py
datapizza-ai-embedders/cohere/: pyproject.toml
datapizza-ai-embedders/fastembedder/: pyproject.toml
datapizza-ai-embedders/fastembedder/tests/: test_fastembedder.py
datapizza-ai-embedders/google/: pyproject.toml
datapizza-ai-embedders/mistral/: README.md  pyproject.toml
datapizza-ai-embedders/mistral/tests/: test_mistral_embedder.py
datapizza-ai-embedders/ollama/: README.md  pyproject.toml
datapizza-ai-embedders/ollama/datapizza/embedders/ollama/: __init__.py  ollama.py
datapizza-ai-embedders/ollama/tests/: test_ollama_embedder.py
datapizza-ai-embedders/openai/: pyproject.toml
datapizza-ai-embedders/regolo/: README.md  pyproject.toml
datapizza-ai-embedders/regolo/tests/: test_regolo_embedder.py
datapizza-ai-memory/redis/: README.md  pyproject.toml
datapizza-ai-persistent-memory/redis/: README.md  pyproject.toml
datapizza-ai-tools/SQLDatabase/: README.md  pyproject.toml
datapizza-ai-tools/duckduckgo/: pyproject.toml
datapizza-ai-tools/filesystem/: README.md  pyproject.toml
datapizza-ai-tools/mcptoolbox/: Readme.md  pyproject.toml
datapizza-ai-tools/mcptoolbox/datapizza/tools/mcptoolbox/: __init__.py  base.py
datapizza-ai-tools/mcptoolbox/tests/: test.py  test_mcptoolbox.py
datapizza-ai-tools/telegram/: README.md  pyproject.toml
datapizza-ai-tools/telegram/datapizza/tools/telegram/: __init__.py
datapizza-ai-tools/telegram/datapizza/tools/telegram_tool/: __init__.py  base.py
datapizza-ai-tools/telegram/tests/: test_telegram_bot_tool.py
datapizza-ai-tools/web_fetch/: README.md  pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-milvus/: README.md  pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-qdrant/: pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-redis/: README.md  pyproject.toml
docs/Guides/: .pages
(+281 files in other folders)
