[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapizza-ai-embedders-ollama"
version = "0.1.0"
description = "Ollama embedder for DataPizza AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataPizza Team"}
]
keywords = ["embeddings", "ollama", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "datapizza-ai-core>=0.1.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/datapizza-ai"
Repository = "https://github.com/yourusername/datapizza-ai"