[project]
name = "datapizza-ai-tools-mcptoolbox"
version = "0.1.0"
description = "MCP Toolbox tool for datapizza-ai"
authors = [
    { name = "Datapizza TEAM", email = "team@datapizza.it" }
]
dependencies = [
    "datapizza-ai-core",
    "toolbox-core>=0.5.8",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datapizza"]

[tool.ruff]
line-length = 88
target-version = "py310"
